# Concordia-Research-Multibot

./: README.md  one.webm  three.webm  two.webm
install/: local_setup.sh  setup.sh
install/turtlebot3_multi_robot/lib/turtlebot3_multi_robot/: monitor_position.py
install/turtlebot3_multi_robot/share/turtlebot3_multi_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_multi_robot/share/turtlebot3_multi_robot/cmake/: turtlebot3_multi_robotConfig-version.cmake  turtlebot3_multi_robotConfig.cmake
install/turtlebot3_multi_robot/share/turtlebot3_multi_robot/config/: blank_map.pgm  blank_map.yaml  map.pgm  map.yaml  my_map.pgm  my_map.yaml  my_world_map.pgm  my_world_map.yaml
log/: latest_build  latest_list
src/turtlebot3_multi_robot/: CMakeLists.txt  README.md
src/turtlebot3_multi_robot/config/: blank_map.yaml  my_map.pgm  my_world_map.yaml
src/turtlebot3_multi_robot/launch/: gazebo_multi_nav2_world.launch.py  gazebo_multi_world.launch.py
src/turtlebot3_multi_robot/models/marker/: model.sdf
src/turtlebot3_multi_robot/models/turtlebot3_waffle/: model.sdf
src/turtlebot3_multi_robot/models/walls/: model.config  model.sdf
src/turtlebot3_multi_robot/params/: nav2_params.yaml
src/turtlebot3_multi_robot/rviz/: multi_nav2_default_view.rviz
src/turtlebot3_multi_robot/scripts/: goal_listener_and_sender.py  monitor_position.py  spawn.py
src/turtlebot3_multi_robot/urdf/: turtlebot3_waffle.urdf
src/turtlebot3_multi_robot/worlds/: ev_9.world  multi_empty_world.world  multi_robot_world.world
(+44 files in other folders)
